tests/cases/compiler-development/artifact/errors/diagnostic-generic-signature-unknown-param.diagnostic
diagnostic error code=T0001 family=type message="unsupported executable type 'U'" sources=1 labels=1 notes=0 helps=0
  Source source_id=0 kind=file path="tests/cases/generics/errors/generic-signature-unknown-param.ari" display="tests/cases/generics/errors/generic-signature-unknown-param.ari" bytes=83
  Label index=0 role=primary source_id=0 source="tests/cases/generics/errors/generic-signature-unknown-param.ari" line=1 column=22 end_line=1 end_column=23 byte_start=21 byte_end=22 message=""
  Snippet label=0 text="  --> tests/cases/generics/errors/generic-signature-unknown-param.ari:1:22\n   |\n 1 | fn consume[T](value: U) -> T {\n   |                      ^"
